cluster/apps/media/photos/endpoint.yaml
apiVersion: v1
kind: Endpoints
metadata:
  name: photos
  namespace: media
subsets:
- addresses:
  - ip: 192.168.100.95
  ports:
  - port: 5080
