cluster/apps/media/photos/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: photos
  namespace: media
spec:
  ports:
    - port: 80
      protocol: TCP
      targetPort: 5080
      name: http
