cluster/apps/media/photos/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: photosingress
  namespace: media
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: photos
    gethomepage.dev/icon: si-jellyfin
    external-dns.alpha.kubernetes.io/target: "${CLOUDFLARE_DDNS_RECORD}"
    external-dns.alpha.kubernetes.io/cloudflare-proxied: "false"
    traefik.ingress.kubernetes.io/router.middlewares: "networking-buffering-large-files@kubernetescrd"
spec:
  ingressClassName: traefik
  rules:
    - host: &host "photos.${SECRET_DOMAIN}"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: photos
                port:
                  number: 80
  tls:
    - hosts:
        - *host
